--- a/content/Spark The Definitive Guide/10. Advanced RDDs.md
+++ b/content/Spark The Definitive Guide/10. Advanced RDDs.md
@@ -82,7 +82,7 @@ One interesting task you might want to do with an RDD is look up the result for 
 
 If we lookup “s”, we are going to get both values associated with that—“Spark” and “Simple”:
 ```python
-keyword.loopup("s")
+keyword.lookup("s")
 ```
 ### sampleByKey
 There are two ways: **approximation** or **exactly**
@@ -327,6 +327,7 @@ df.printSchema()
 Spark has two built-in Partitioners:
 - `HashPartitioner`
 - `RangePartitioner`
+
 These two work for discrete values and continuous values.
 Spark’s Structured APIs will already use these, although we can use the same thing in RDDs.
 ```scala
