--- a/content/Spark The Definitive Guide/6. Joins.md
+++ b/content/Spark The Definitive Guide/6. Joins.md
@@ -73,7 +73,10 @@ person.join(graduateProgram, joinExpression, joinType).show()
 |  id|            name|graduate_program|   spark_status| id| degree| departmen... 
 +----+----------------+----------------+---------------+---+-------+------------- 
 |   1|   Matei Zaharia|               1|[500, 250, 100]|  1|  Ph.D.| EEC...
-| 2|Michael Armbrust| 1| [250, 100]| 1| Ph.D.| EEC... |null| null| null| null| 2|Masters| EEC... | 0| Bill Chambers| 0| [100]| 0|Masters| School... +----+----------------+----------------+---------------+---+-------+-------------
+|   2|Michael Armbrust|               1|     [250, 100]|  1|  Ph.D.| EEC... 
+|null|            null|            null|           null|  2|Masters| EEC... 
+|   0|   Bill Chambers|               0|          [100]|  0|Masters| School... 
++----+----------------+----------------+---------------+---+-------+-------------
 ```
 ## Left Outer Joins
 Left outer joins evaluate the keys in both of the DataFrames or tables and includes all rows from the left DataFrame as well as any rows in the right DataFrame that have a match in the left DataFrame. If there is no equivalent row in the right DataFrame, Spark will insert null:
@@ -148,7 +151,8 @@ graduateProgram.join(person, joinExpression, joinType).show()
 | id| degree|department|     school| id|            name| graduate_program|spar...
 +---+-------+----------+-----------+---+----------------+----------------+-------
 |  0|Masters| School...|UC Berkeley|  0|   Bill Chambers|               0| ...
-|  1|  Ph.D.|      EECS|UC Berkeley|  2|Michael Armbrust|               1| [2... |  1|  Ph.D.|      EECS|UC Berkeley|  1|   Matei Zaharia|               1|[500...
+|  1|  Ph.D.|      EECS|UC Berkeley|  2|Michael Armbrust|               1| [2... 
+|  1|  Ph.D.|      EECS|UC Berkeley|  1|   Matei Zaharia|               1|[500...
 +---+-------+----------+-----------+---+----------------+----------------+-------
 ```
 
