--- a/content/Spark The Definitive Guide/9. Resilient Distributed Datasets (RDDs).md
+++ b/content/Spark The Definitive Guide/9. Resilient Distributed Datasets (RDDs).md
@@ -40,7 +40,7 @@ RDDs give you complete control.
 > You can store anything you want in these objects, in any format you want.
 
 Every manipulation and interaction between values must be defined by hand.
-[Why Apache Spark RDD is immutable?](1.%20Why%20Apache%20Spark%20RDD%20is%20immutable?.md)
+[[1. Why Apache Spark RDD is immutable?]]
 ## Types of RDDs
 Two types of RDDs: 
 - The “generic” RDD type 
