Feature/Add the knowledge about spark, data format, data warehouse

--- a/content/Spark The Definitive Guide/6. Joins.md
+++ b/content/Spark The Definitive Guide/6. Joins.md
@@ -299,3 +299,5 @@ When performing joins with small tables, it’s usually best to *let Spark decid
 - It is important to consider is if you partition your data correctly prior to a join, you can end up with much more efficient execution because even if a shuffle is planned, if data from two different DataFrames is already located on the same machine, Spark can avoid the shuffle.
 - Experiment with some of your data and try partitioning beforehand to see if you can notice the increase in speed when performing those joins.
 - Later on, Spark’s data source APIs. There are additional implications when you decide what order joins should occur in. Because some joins act as filters, this can be a low-hanging improvement in your workloads, as you are guaranteed to reduce data exchanged over the network.
+## Optimize Spark Jobs
+![](../../../6.%20Vault/attachments/optimize_spark_join.png)
