--- a/content/Data Warehouse/1. Slowly Change Dimension (SCD).md
+++ b/content/Data Warehouse/1. Slowly Change Dimension (SCD).md
@@ -15,12 +15,12 @@ channel:
 category:
   - technology
 ---
-## Type 0:
+## Type 0
 Ignore any changes and audit the changes.
-## Type 1:
+## Type 1
 This type will overwrite data, if the source of dimension value changed. It doesn't require preserve the data
 This type should be used, when We need to preserve history of fact table and dimension.
-## Type 2:
+## Type 2
 This type will insert a new row, If the source of dimension value change.
 This type ensure that the history of fact table preserved.
 > [!Example] Example
@@ -29,13 +29,13 @@ This type ensure that the history of fact table preserved.
 We should add a flag to avoid the end user query will look duplicate data.
 > [!Info] INFO
 > Type 2 changes preserve the dimensional detail surrounding facts. They may confuse users, however, by appearing to duplicate information in dimension tables. Avoid this confusion by issuing browse queries that select distinct values, and by offering a flag to indicate whether each row represents the current version for its natural key value
-## Type 3:
+## Type 3
 History will be added as a new column.
 Typically, this would be better suited to implement name changes of an employee. In some cases, female employees will change their names after their marriage. In such situations, you can use Type 3 SCD since these types of changes will not occur rapidly.
-## Type 4:
+## Type 4
 A new dimension will be added.
 We maintain the history by adding a different version of the row to the dimension. However, if the changes are rapid in nature Type 2 SCD will not be scalable.
 In this technique, a rapidly changing column is moved out of the dimension and is moved to a new dimension table. This new dimension is linked to the fact table as shown in the below diagram.
-## Type 6:
+## Type 6
 Combination of Type 2 and Type 3.
 Add column to mark current value.
