feat(content): Add author profiles property

--- a/content/Spark The Definitive Guide/2. Structured API Execution.md
+++ b/content/Spark The Definitive Guide/2. Structured API Execution.md
@@ -4,6 +4,10 @@ aliases:
 created: 2024-11-30
 publish: 2024-11-30T22:11:00
 progress: done
+Author:
+  - Loi Nguyen
+Author Profile:
+  - https://www.linkedin.com/in/loinguyen318/
 blueprint:
   - "[[../../4. Blueprint/Apache Spark Knowledge|Apache Spark Knowledge]]"
   - "[[../../../4. Blueprint/Technical Knowledge|Technical Knowledge]]"
