--- a/content/Apache Spark/1. Why Apache Spark RDD is immutable?.md
+++ b/content/Apache Spark/1. Why Apache Spark RDD is immutable?.md
@@ -4,6 +4,10 @@ aliases:
 created: 2024-10-02
 publish: 2024-11-30T23:42:00
 progress: done
+Author:
+  - Loi Nguyen
+Author Profile:
+  - https://www.linkedin.com/in/loinguyen318/
 blueprint:
   - "[[../../4. Blueprint/Apache Spark Knowledge|Apache Spark Knowledge]]"
   - "[[../../../4. Blueprint/Technical Knowledge|Technical Knowledge]]"
