--- a/content/Apache Spark/2. Spark Introduction.md
+++ b/content/Apache Spark/2. Spark Introduction.md
@@ -4,6 +4,10 @@ aliases:
 created: 2024-12-01
 publish: 2024-12-01T21:06:00
 progress: done
+Author:
+  - Loi Nguyen
+Author Profile:
+  - https://www.linkedin.com/in/loinguyen318/
 blueprint:
   - "[[../../../4. Blueprint/Technical Knowledge|Technical Knowledge]]"
   - "[[../../4. Blueprint/Apache Spark Knowledge|Apache Spark Knowledge]]"
