--- a/content/Apache Spark/3. How Apache Spark plans the execution for us.md
+++ b/content/Apache Spark/3. How Apache Spark plans the execution for us.md
@@ -4,6 +4,12 @@ aliases:
 created: 2024-12-01
 publish: 2024-12-01T21:11:00
 progress: done
+Author:
+  - Vu Trinh
+  - Loi Nguyen
+Author Profile:
+  - https://substack.com/@vutr
+  - https://www.linkedin.com/in/loinguyen318/
 blueprint:
   - "[[../../4. Blueprint/Apache Spark Knowledge|Apache Spark Knowledge]]"
   - "[[../../../4. Blueprint/Technical Knowledge|Technical Knowledge]]"
