--- a/content/Data Format/2. Parquet.md
+++ b/content/Data Format/2. Parquet.md
@@ -4,6 +4,12 @@ aliases:
 created: 2024-12-01
 publish: 2024-12-01T20:46:00
 progress: done
+Author:
+  - Vu Trinh
+  - Loi Nguyen
+Author Profile:
+  - https://substack.com/@vutr
+  - https://www.linkedin.com/in/loinguyen318/
 blueprint:
   - "[[../../../4. Blueprint/Technical Knowledge|Technical Knowledge]]"
 impact: 
