feat(content): Change last updated to published on and add more new spark knowledge

--- a/content/Spark The Definitive Guide/1. Overview Apache Spark.md
+++ b/content/Spark The Definitive Guide/1. Overview Apache Spark.md
@@ -43,3 +43,5 @@ In spark, **reading data is also transformation**, and is therefore a **lazy ope
 
 ![](../../../6.%20Vault/attachments/Pasted%20image%2020241102150301.png)
 Spark uses an engine called Catalyst that maintains its own type information through the planning and processing of work. Spark types map directly to the different language APIs that Spark maintains and there exists a lookup table for each of these in Scala, Java, Python, SQL, and R.
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
