--- a/content/Spark The Definitive Guide/10. Advanced RDDs.md
+++ b/content/Spark The Definitive Guide/10. Advanced RDDs.md
@@ -418,3 +418,5 @@ val conf = new SparkConf().setMaster(...).setAppName(...)
 conf.registerKryoClasses(Array(classOf[MyClass1], classOf[MyClass2])) 
 val sc = new SparkContext(conf)
 ```
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
