--- a/content/Spark The Definitive Guide/11. Distributed Shared Variables.md
+++ b/content/Spark The Definitive Guide/11. Distributed Shared Variables.md
@@ -144,3 +144,5 @@ rdd = sc.parallelize([1,2,3])
 rdd.foreach(g)
 va.value
 ```
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
