--- a/content/Spark The Definitive Guide/2. Structured API Execution.md
+++ b/content/Spark The Definitive Guide/2. Structured API Execution.md
@@ -135,4 +135,5 @@ AdaptiveSparkPlan isFinalPlan=false
 In the output of the `EXPLAIN()` method, it always mentions as this physical plan is not the final plan. Only in spark UI we can see the final plan due to Adoptive Query Execution turned ON, it finalizes the plan on the fly based on the execution statistics.
 > [!Question] How does the Catalyst Optimizer choose the best physical plan?
 > Research 
-
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
