--- a/content/Spark The Definitive Guide/3. Basic Structured Operations.md
+++ b/content/Spark The Definitive Guide/3. Basic Structured Operations.md
@@ -180,4 +180,5 @@ collectDF.toLocalIterator()
 ```
 > [!Warning] WARNING
 > Any collection of data to the driver can be a very expensive operation! If you have a large dataset and call collect, you can crash the driver. If you use toLocalIterator and have very large partitions, you can easily crash the driver node and lose the state of your application. This is also expensive because we can operate on a one-by-one basis, instead of running computation in parallel.
-
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
