--- a/content/Spark The Definitive Guide/4. Working with Different Types  of Data.md
+++ b/content/Spark The Definitive Guide/4. Working with Different Types  of Data.md
@@ -550,3 +550,5 @@ When you want to optionally return a value from a UDF, you should return None in
 
 > [!NOTE] Can I use Spark coalesce() to increase the number of partitions?
 > No, Spark coalesce() can only be used to decrease the number of partitions. If you need to increase the number of partitions, you should use Spark repartition() instead.
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
