--- a/content/Spark The Definitive Guide/5. Aggregations.md
+++ b/content/Spark The Definitive Guide/5. Aggregations.md
@@ -468,4 +468,6 @@ spark.range(1)
 ```
 
 > [!NOTE] Pyspark with UDAFs
-> UDAFs are currently available only in Scala or Java. However, in Spark 2.3, you will also be able to call Scala or Java UDFs and UDAFs by registering the function
+> UDAFs are currently available only in Scala or Java. However, in Spark 2.3, you will also be able to call Scala or Java UDFs and UDAFs by registering the function.
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
