--- a/content/Spark The Definitive Guide/6. Joins.md
+++ b/content/Spark The Definitive Guide/6. Joins.md
@@ -305,3 +305,5 @@ When performing joins with small tables, it’s usually best to *let Spark decid
 - Later on, Spark’s data source APIs. There are additional implications when you decide what order joins should occur in. Because some joins act as filters, this can be a low-hanging improvement in your workloads, as you are guaranteed to reduce data exchanged over the network.
 ## Optimize Spark Jobs
 ![](../../../6.%20Vault/attachments/optimize_spark_join.png)
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
