--- a/content/Spark The Definitive Guide/7. Data Sources.md
+++ b/content/Spark The Definitive Guide/7. Data Sources.md
@@ -504,3 +504,5 @@ For example, if you set an option for a writer as Spark will ensure that files w
 ```python
 df.write.option("maxRecordsPerFile", 5000)
 ```
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
