--- a/content/Spark The Definitive Guide/8. Spark SQL.md
+++ b/content/Spark The Definitive Guide/8. Spark SQL.md
@@ -426,3 +426,5 @@ SELECT *, (SELECT max(count) FROM flights) AS maximum FROM flights
 ```sql
 SET spark.sql.shuffle.partitions=20
 ```
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
