--- a/content/Spark The Definitive Guide/9. Resilient Distributed Datasets (RDDs).md
+++ b/content/Spark The Definitive Guide/9. Resilient Distributed Datasets (RDDs).md
@@ -276,3 +276,5 @@ def indexedFunc(partitionIndex, withinPartIterator):
 			
 words.mapPartitionsWithIndex(indexedFunc).collect()
 ```
+## References
+- [Spark: The Definitive Guide](https://www.oreilly.com/library/view/spark-the-definitive/9781491912201/) by Bill Chambers and Matei Zaharia.
