bugfix(reference-link): change reference links format

--- a/content/Spark The Definitive Guide/12. How Spark Runs on a  Cluster.md
+++ b/content/Spark The Definitive Guide/12. How Spark Runs on a  Cluster.md
@@ -28,9 +28,9 @@ category:
 - What it takes to run a Spark Application.
 ## The Architecture of a Spark Application
 > [!Hint] More Information
-> [Spark Introduction](../../../5.%20Exhibit/Apache%20Spark/2.%20Spark%20Introduction.md)
+> [[2. Spark Introduction|Spark Introduction]]
 > 
-> [How Apache Spark plans the execution for us](../../../5.%20Exhibit/Apache%20Spark/3.%20How%20Apache%20Spark%20plans%20the%20execution%20for%20us.md)
+> [[3. How Apache Spark plans the execution for us|How Apache Spark plans the execution for us]]
 
 Some of the high-level components of a Spark Application:
 - The Spark driver
@@ -112,7 +112,10 @@ We assume that a cluster is already running with four nodes, a driver (not a Spa
 
 - The driver and the workers communicate among themselves, executing code and moving data around.
 - The driver schedules tasks onto each worker, and each worker responds with the status of those tasks and success or failure.
-More Information: [[3. How Apache Spark plans the execution for us|How Apache Spark plans the execution for us]], [[4. Apache Spark scheduling|Apache Spark scheduling]]
+> [!Hint] More Information
+> [[3. How Apache Spark plans the execution for us|How Apache Spark plans the execution for us]]
+> 
+> [[4. Apache Spark scheduling|Apache Spark scheduling]]
 ### Completion
 After a Spark Application completes, the driver process exits with either success or failure. The cluster manager then shuts down the executors in that Spark cluster for the driver. At this point, you can see the success or failure of the Spark Application by asking the cluster manager for this information.
 
